# cr-helper

./: .gitignore  Cargo.toml  README.md
crates/cr-cli/: Cargo.toml
crates/cr-cli/src/: main.rs
crates/cr-cli/src/commands/: config.rs  doctor.rs  export.rs  init.rs  install.rs  mod.rs  review.rs  session.rs  uninstall.rs
crates/cr-cli/src/templates/: SKILL.md  parse-review.py
crates/cr-cli/src/templates/hooks/: session-start.sh  stop.sh
crates/cr-core/: Cargo.toml
crates/cr-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/cr-core/src/comment/: builder.rs  index.rs  manager.rs  mod.rs  model.rs  validator.rs
crates/cr-core/src/diff/: delta.rs  mod.rs  model.rs  navigator.rs  parser.rs
crates/cr-core/src/export/: context.rs  exporter.rs  json.rs  markdown.rs  mod.rs
crates/cr-core/src/session/: manager.rs  migration.rs  mod.rs  model.rs  persistence.rs
crates/cr-integration/: Cargo.toml
crates/cr-integration/src/: detection.rs  lib.rs  verification.rs
crates/cr-integration/src/adapter/: claude_code.rs  mod.rs
crates/cr-storage/: Cargo.toml
crates/cr-storage/src/: lib.rs  session_store.rs
crates/cr-ui/: Cargo.toml
crates/cr-ui/src/: highlight.rs  lib.rs
crates/cr-ui/src/app/: mod.rs  state.rs
crates/cr-ui/src/components/: mod.rs
crates/cr-ui/src/events/: mod.rs
crates/cr-ui/src/input/: mod.rs
crates/cr-ui/src/layout/: mod.rs
crates/cr-ui/src/theme/: mod.rs
