[package]
name = "cr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for cr-helper - Code Review Helper"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
toml = { workspace = true }
