[package]
name = "cr-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent integration library for cr-helper - Code Review Helper"

[dependencies]
cr-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
