[package]
name = "cr-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage library for cr-helper - Code Review Helper"

[dependencies]
cr-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
